// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Multi Line Tooltip - No Header should render multiple line tooltip correctly 1`] = `
<WithStyles(ForwardRef)
  title={
    <div>
      <WithStyles(ForwardRef)
        variant="highlightText"
      >
        
      </WithStyles(ForwardRef)>
      <div>
        <WithStyles(ForwardRef)
          variant="highlightText"
        >
          Status
        </WithStyles(ForwardRef)>
        <div />
        <WithStyles(ForwardRef)>
          Open
        </WithStyles(ForwardRef)>
      </div>
      <div>
        <WithStyles(ForwardRef)
          variant="highlightText"
        >
          Date
        </WithStyles(ForwardRef)>
        <div />
        <WithStyles(ForwardRef)>
          12/08/2018
        </WithStyles(ForwardRef)>
      </div>
      <div>
        <WithStyles(ForwardRef)
          variant="highlightText"
        >
          Assignee
        </WithStyles(ForwardRef)>
        <div />
        <WithStyles(ForwardRef)>
          Management
        </WithStyles(ForwardRef)>
      </div>
      <div>
        <WithStyles(ForwardRef)
          variant="highlightText"
        >
          Approval
        </WithStyles(ForwardRef)>
        <div />
        <WithStyles(ForwardRef)>
          Not yet requested
        </WithStyles(ForwardRef)>
      </div>
    </div>
  }
  useSingle={false}
>
  <ForwardRef
    classes={
      Object {
        "color": "HvTooltip-color",
        "popper": "HvTooltip-popper",
        "root": "HvTooltip-root",
        "separator": "HvTooltip-separator",
        "separatorColor": "HvTooltip-separatorColor",
        "title": "HvTooltip-title",
        "tooltip": "HvTooltip-tooltip",
        "tooltipMulti": "HvTooltip-tooltipMulti",
        "valueWrapper": "HvTooltip-valueWrapper",
        "values": "HvTooltip-values",
        "valuesContainer": "HvTooltip-valuesContainer",
      }
    }
    title={
      <div>
        <WithStyles(ForwardRef)
          variant="highlightText"
        >
          
        </WithStyles(ForwardRef)>
        <div>
          <WithStyles(ForwardRef)
            variant="highlightText"
          >
            Status
          </WithStyles(ForwardRef)>
          <div />
          <WithStyles(ForwardRef)>
            Open
          </WithStyles(ForwardRef)>
        </div>
        <div>
          <WithStyles(ForwardRef)
            variant="highlightText"
          >
            Date
          </WithStyles(ForwardRef)>
          <div />
          <WithStyles(ForwardRef)>
            12/08/2018
          </WithStyles(ForwardRef)>
        </div>
        <div>
          <WithStyles(ForwardRef)
            variant="highlightText"
          >
            Assignee
          </WithStyles(ForwardRef)>
          <div />
          <WithStyles(ForwardRef)>
            Management
          </WithStyles(ForwardRef)>
        </div>
        <div>
          <WithStyles(ForwardRef)
            variant="highlightText"
          >
            Approval
          </WithStyles(ForwardRef)>
          <div />
          <WithStyles(ForwardRef)>
            Not yet requested
          </WithStyles(ForwardRef)>
        </div>
      </div>
    }
    useSingle={false}
  >
    <WithStyles(ForwardRef(Tooltip))
      TransitionComponent={
        Object {
          "$$typeof": Symbol(react.forward_ref),
          "propTypes": Object {
            "children": [Function],
            "disableStrictModeCompat": [Function],
            "in": [Function],
            "onEnter": [Function],
            "onEntered": [Function],
            "onEntering": [Function],
            "onExit": [Function],
            "onExited": [Function],
            "onExiting": [Function],
            "style": [Function],
            "timeout": [Function],
          },
          "render": [Function],
        }
      }
      TransitionProps={
        Object {
          "timeout": 400,
        }
      }
      classes={
        Object {
          "popper": "HvTooltip-popper",
          "tooltip": "HvTooltip-tooltipMulti",
        }
      }
      enterDelay={300}
      placement="top"
      title={
        <div>
          <WithStyles(ForwardRef)
            variant="highlightText"
          >
            
          </WithStyles(ForwardRef)>
          <div>
            <WithStyles(ForwardRef)
              variant="highlightText"
            >
              Status
            </WithStyles(ForwardRef)>
            <div />
            <WithStyles(ForwardRef)>
              Open
            </WithStyles(ForwardRef)>
          </div>
          <div>
            <WithStyles(ForwardRef)
              variant="highlightText"
            >
              Date
            </WithStyles(ForwardRef)>
            <div />
            <WithStyles(ForwardRef)>
              12/08/2018
            </WithStyles(ForwardRef)>
          </div>
          <div>
            <WithStyles(ForwardRef)
              variant="highlightText"
            >
              Assignee
            </WithStyles(ForwardRef)>
            <div />
            <WithStyles(ForwardRef)>
              Management
            </WithStyles(ForwardRef)>
          </div>
          <div>
            <WithStyles(ForwardRef)
              variant="highlightText"
            >
              Approval
            </WithStyles(ForwardRef)>
            <div />
            <WithStyles(ForwardRef)>
              Not yet requested
            </WithStyles(ForwardRef)>
          </div>
        </div>
      }
    >
      <ForwardRef(Tooltip)
        TransitionComponent={
          Object {
            "$$typeof": Symbol(react.forward_ref),
            "propTypes": Object {
              "children": [Function],
              "disableStrictModeCompat": [Function],
              "in": [Function],
              "onEnter": [Function],
              "onEntered": [Function],
              "onEntering": [Function],
              "onExit": [Function],
              "onExited": [Function],
              "onExiting": [Function],
              "style": [Function],
              "timeout": [Function],
            },
            "render": [Function],
          }
        }
        TransitionProps={
          Object {
            "timeout": 400,
          }
        }
        classes={
          Object {
            "arrow": "MuiTooltip-arrow",
            "popper": "MuiTooltip-popper HvTooltip-popper",
            "popperArrow": "MuiTooltip-popperArrow",
            "popperInteractive": "MuiTooltip-popperInteractive",
            "tooltip": "MuiTooltip-tooltip HvTooltip-tooltipMulti",
            "tooltipArrow": "MuiTooltip-tooltipArrow",
            "tooltipPlacementBottom": "MuiTooltip-tooltipPlacementBottom",
            "tooltipPlacementLeft": "MuiTooltip-tooltipPlacementLeft",
            "tooltipPlacementRight": "MuiTooltip-tooltipPlacementRight",
            "tooltipPlacementTop": "MuiTooltip-tooltipPlacementTop",
            "touch": "MuiTooltip-touch",
          }
        }
        enterDelay={300}
        placement="top"
        title={
          <div>
            <WithStyles(ForwardRef)
              variant="highlightText"
            >
              
            </WithStyles(ForwardRef)>
            <div>
              <WithStyles(ForwardRef)
                variant="highlightText"
              >
                Status
              </WithStyles(ForwardRef)>
              <div />
              <WithStyles(ForwardRef)>
                Open
              </WithStyles(ForwardRef)>
            </div>
            <div>
              <WithStyles(ForwardRef)
                variant="highlightText"
              >
                Date
              </WithStyles(ForwardRef)>
              <div />
              <WithStyles(ForwardRef)>
                12/08/2018
              </WithStyles(ForwardRef)>
            </div>
            <div>
              <WithStyles(ForwardRef)
                variant="highlightText"
              >
                Assignee
              </WithStyles(ForwardRef)>
              <div />
              <WithStyles(ForwardRef)>
                Management
              </WithStyles(ForwardRef)>
            </div>
            <div>
              <WithStyles(ForwardRef)
                variant="highlightText"
              >
                Approval
              </WithStyles(ForwardRef)>
              <div />
              <WithStyles(ForwardRef)>
                Not yet requested
              </WithStyles(ForwardRef)>
            </div>
          </div>
        }
      >
        <button
          aria-describedby={null}
          className=""
          id="testChild"
          onBlur={[Function]}
          onFocus={[Function]}
          onMouseLeave={[Function]}
          onMouseOver={[Function]}
          onTouchEnd={[Function]}
          onTouchStart={[Function]}
          title={null}
          type="submit"
        >
          Hello World
        </button>
        <ForwardRef(Popper)
          anchorEl={
            <button
              class=""
              id="testChild"
              type="submit"
            >
              Hello World
            </button>
          }
          className="MuiTooltip-popper HvTooltip-popper"
          id={null}
          open={false}
          placement="top"
          popperOptions={
            Object {
              "modifiers": Object {
                "arrow": Object {
                  "element": null,
                  "enabled": false,
                },
              },
            }
          }
          transition={true}
        />
      </ForwardRef(Tooltip)>
    </WithStyles(ForwardRef(Tooltip))>
  </ForwardRef>
</WithStyles(ForwardRef)>
`;

exports[`Multi Line Tooltip - With Header should render multiple line tooltip with header correctly 1`] = `
<WithStyles(ForwardRef)
  title={
    <div>
      <WithStyles(ForwardRef)
        variant="highlightText"
      >
        January
      </WithStyles(ForwardRef)>
      <div>
        <WithStyles(ForwardRef)
          variant="highlightText"
        >
          Sales
        </WithStyles(ForwardRef)>
        <div />
        <WithStyles(ForwardRef)>
          52,000 units
        </WithStyles(ForwardRef)>
      </div>
      <div>
        <WithStyles(ForwardRef)
          variant="highlightText"
        >
          Profit
        </WithStyles(ForwardRef)>
        <div />
        <WithStyles(ForwardRef)>
          50%
        </WithStyles(ForwardRef)>
      </div>
    </div>
  }
  useSingle={false}
>
  <ForwardRef
    classes={
      Object {
        "color": "HvTooltip-color",
        "popper": "HvTooltip-popper",
        "root": "HvTooltip-root",
        "separator": "HvTooltip-separator",
        "separatorColor": "HvTooltip-separatorColor",
        "title": "HvTooltip-title",
        "tooltip": "HvTooltip-tooltip",
        "tooltipMulti": "HvTooltip-tooltipMulti",
        "valueWrapper": "HvTooltip-valueWrapper",
        "values": "HvTooltip-values",
        "valuesContainer": "HvTooltip-valuesContainer",
      }
    }
    title={
      <div>
        <WithStyles(ForwardRef)
          variant="highlightText"
        >
          January
        </WithStyles(ForwardRef)>
        <div>
          <WithStyles(ForwardRef)
            variant="highlightText"
          >
            Sales
          </WithStyles(ForwardRef)>
          <div />
          <WithStyles(ForwardRef)>
            52,000 units
          </WithStyles(ForwardRef)>
        </div>
        <div>
          <WithStyles(ForwardRef)
            variant="highlightText"
          >
            Profit
          </WithStyles(ForwardRef)>
          <div />
          <WithStyles(ForwardRef)>
            50%
          </WithStyles(ForwardRef)>
        </div>
      </div>
    }
    useSingle={false}
  >
    <WithStyles(ForwardRef(Tooltip))
      TransitionComponent={
        Object {
          "$$typeof": Symbol(react.forward_ref),
          "propTypes": Object {
            "children": [Function],
            "disableStrictModeCompat": [Function],
            "in": [Function],
            "onEnter": [Function],
            "onEntered": [Function],
            "onEntering": [Function],
            "onExit": [Function],
            "onExited": [Function],
            "onExiting": [Function],
            "style": [Function],
            "timeout": [Function],
          },
          "render": [Function],
        }
      }
      TransitionProps={
        Object {
          "timeout": 400,
        }
      }
      classes={
        Object {
          "popper": "HvTooltip-popper",
          "tooltip": "HvTooltip-tooltipMulti",
        }
      }
      enterDelay={300}
      placement="top"
      title={
        <div>
          <WithStyles(ForwardRef)
            variant="highlightText"
          >
            January
          </WithStyles(ForwardRef)>
          <div>
            <WithStyles(ForwardRef)
              variant="highlightText"
            >
              Sales
            </WithStyles(ForwardRef)>
            <div />
            <WithStyles(ForwardRef)>
              52,000 units
            </WithStyles(ForwardRef)>
          </div>
          <div>
            <WithStyles(ForwardRef)
              variant="highlightText"
            >
              Profit
            </WithStyles(ForwardRef)>
            <div />
            <WithStyles(ForwardRef)>
              50%
            </WithStyles(ForwardRef)>
          </div>
        </div>
      }
    >
      <ForwardRef(Tooltip)
        TransitionComponent={
          Object {
            "$$typeof": Symbol(react.forward_ref),
            "propTypes": Object {
              "children": [Function],
              "disableStrictModeCompat": [Function],
              "in": [Function],
              "onEnter": [Function],
              "onEntered": [Function],
              "onEntering": [Function],
              "onExit": [Function],
              "onExited": [Function],
              "onExiting": [Function],
              "style": [Function],
              "timeout": [Function],
            },
            "render": [Function],
          }
        }
        TransitionProps={
          Object {
            "timeout": 400,
          }
        }
        classes={
          Object {
            "arrow": "MuiTooltip-arrow",
            "popper": "MuiTooltip-popper HvTooltip-popper",
            "popperArrow": "MuiTooltip-popperArrow",
            "popperInteractive": "MuiTooltip-popperInteractive",
            "tooltip": "MuiTooltip-tooltip HvTooltip-tooltipMulti",
            "tooltipArrow": "MuiTooltip-tooltipArrow",
            "tooltipPlacementBottom": "MuiTooltip-tooltipPlacementBottom",
            "tooltipPlacementLeft": "MuiTooltip-tooltipPlacementLeft",
            "tooltipPlacementRight": "MuiTooltip-tooltipPlacementRight",
            "tooltipPlacementTop": "MuiTooltip-tooltipPlacementTop",
            "touch": "MuiTooltip-touch",
          }
        }
        enterDelay={300}
        placement="top"
        title={
          <div>
            <WithStyles(ForwardRef)
              variant="highlightText"
            >
              January
            </WithStyles(ForwardRef)>
            <div>
              <WithStyles(ForwardRef)
                variant="highlightText"
              >
                Sales
              </WithStyles(ForwardRef)>
              <div />
              <WithStyles(ForwardRef)>
                52,000 units
              </WithStyles(ForwardRef)>
            </div>
            <div>
              <WithStyles(ForwardRef)
                variant="highlightText"
              >
                Profit
              </WithStyles(ForwardRef)>
              <div />
              <WithStyles(ForwardRef)>
                50%
              </WithStyles(ForwardRef)>
            </div>
          </div>
        }
      >
        <button
          aria-describedby={null}
          className=""
          id="testChild"
          onBlur={[Function]}
          onFocus={[Function]}
          onMouseLeave={[Function]}
          onMouseOver={[Function]}
          onTouchEnd={[Function]}
          onTouchStart={[Function]}
          title={null}
          type="submit"
        >
          Hello World
        </button>
        <ForwardRef(Popper)
          anchorEl={
            <button
              class=""
              id="testChild"
              type="submit"
            >
              Hello World
            </button>
          }
          className="MuiTooltip-popper HvTooltip-popper"
          id={null}
          open={false}
          placement="top"
          popperOptions={
            Object {
              "modifiers": Object {
                "arrow": Object {
                  "element": null,
                  "enabled": false,
                },
              },
            }
          }
          transition={true}
        />
      </ForwardRef(Tooltip)>
    </WithStyles(ForwardRef(Tooltip))>
  </ForwardRef>
</WithStyles(ForwardRef)>
`;

exports[`Single Line Tooltip should render single line tooltip correctly 1`] = `
<WithStyles(ForwardRef)
  title={
    <WithStyles(ForwardRef)
      variant="highlightText"
    >
      Grid View
    </WithStyles(ForwardRef)>
  }
>
  <ForwardRef
    classes={
      Object {
        "color": "HvTooltip-color",
        "popper": "HvTooltip-popper",
        "root": "HvTooltip-root",
        "separator": "HvTooltip-separator",
        "separatorColor": "HvTooltip-separatorColor",
        "title": "HvTooltip-title",
        "tooltip": "HvTooltip-tooltip",
        "tooltipMulti": "HvTooltip-tooltipMulti",
        "valueWrapper": "HvTooltip-valueWrapper",
        "values": "HvTooltip-values",
        "valuesContainer": "HvTooltip-valuesContainer",
      }
    }
    title={
      <WithStyles(ForwardRef)
        variant="highlightText"
      >
        Grid View
      </WithStyles(ForwardRef)>
    }
  >
    <WithStyles(ForwardRef(Tooltip))
      TransitionComponent={
        Object {
          "$$typeof": Symbol(react.forward_ref),
          "propTypes": Object {
            "children": [Function],
            "disableStrictModeCompat": [Function],
            "in": [Function],
            "onEnter": [Function],
            "onEntered": [Function],
            "onEntering": [Function],
            "onExit": [Function],
            "onExited": [Function],
            "onExiting": [Function],
            "style": [Function],
            "timeout": [Function],
          },
          "render": [Function],
        }
      }
      TransitionProps={
        Object {
          "timeout": 400,
        }
      }
      classes={
        Object {
          "popper": "HvTooltip-popper",
          "tooltip": "HvTooltip-tooltip",
        }
      }
      enterDelay={300}
      placement="top"
      title={
        <WithStyles(ForwardRef)
          variant="highlightText"
        >
          Grid View
        </WithStyles(ForwardRef)>
      }
    >
      <ForwardRef(Tooltip)
        TransitionComponent={
          Object {
            "$$typeof": Symbol(react.forward_ref),
            "propTypes": Object {
              "children": [Function],
              "disableStrictModeCompat": [Function],
              "in": [Function],
              "onEnter": [Function],
              "onEntered": [Function],
              "onEntering": [Function],
              "onExit": [Function],
              "onExited": [Function],
              "onExiting": [Function],
              "style": [Function],
              "timeout": [Function],
            },
            "render": [Function],
          }
        }
        TransitionProps={
          Object {
            "timeout": 400,
          }
        }
        classes={
          Object {
            "arrow": "MuiTooltip-arrow",
            "popper": "MuiTooltip-popper HvTooltip-popper",
            "popperArrow": "MuiTooltip-popperArrow",
            "popperInteractive": "MuiTooltip-popperInteractive",
            "tooltip": "MuiTooltip-tooltip HvTooltip-tooltip",
            "tooltipArrow": "MuiTooltip-tooltipArrow",
            "tooltipPlacementBottom": "MuiTooltip-tooltipPlacementBottom",
            "tooltipPlacementLeft": "MuiTooltip-tooltipPlacementLeft",
            "tooltipPlacementRight": "MuiTooltip-tooltipPlacementRight",
            "tooltipPlacementTop": "MuiTooltip-tooltipPlacementTop",
            "touch": "MuiTooltip-touch",
          }
        }
        enterDelay={300}
        placement="top"
        title={
          <WithStyles(ForwardRef)
            variant="highlightText"
          >
            Grid View
          </WithStyles(ForwardRef)>
        }
      >
        <button
          aria-describedby={null}
          className=""
          id="testChild"
          onBlur={[Function]}
          onFocus={[Function]}
          onMouseLeave={[Function]}
          onMouseOver={[Function]}
          onTouchEnd={[Function]}
          onTouchStart={[Function]}
          title={null}
          type="submit"
        >
          Hello World
        </button>
        <ForwardRef(Popper)
          anchorEl={
            <button
              class=""
              id="testChild"
              type="submit"
            >
              Hello World
            </button>
          }
          className="MuiTooltip-popper HvTooltip-popper"
          id={null}
          open={false}
          placement="top"
          popperOptions={
            Object {
              "modifiers": Object {
                "arrow": Object {
                  "element": null,
                  "enabled": false,
                },
              },
            }
          }
          transition={true}
        />
      </ForwardRef(Tooltip)>
    </WithStyles(ForwardRef(Tooltip))>
  </ForwardRef>
</WithStyles(ForwardRef)>
`;
